add basic CRUD endpoints
