# ats-management-service/controllers/ats_controller.py
@@ -12,15 +12,41 @@ def post_ats() -> Tuple[Dict, int]:
     print(f"Creating ATS with: {request_data}")
     db_result = settings.DATABASE[ATS_TABLE].insert_one(request_data)
     insert_id = str(db_result.inserted_id)
-    return {"id": insert_id, "data_stored": request.json}, 200
+    return {"_id": insert_id, "ats_stored": request.json}, 200
 
 
-# TODO: Add methods for all operations in swagger yaml
+def get_ats() -> Tuple[Dict, int]:
+    db_result = settings.DATABASE[ATS_TABLE].find_one()
+    if db_result:
+        insert_id = str(db_result.get("_id"))
+        del db_result["_id"]
+        return {"_id": insert_id, "ats_stored": db_result}, 200
 
-# def get_ats() -> Tuple[Dict, int]:
-#     db_result = settings.DATABASE[ATS_TABLE].insert_one(request_data)
-#     insert_id = str(db_result.inserted_id)
-#     return {
-#                'id': insert_id,
-#                'data_stored': request.json
-#            }, 200
+    return {}, 200
+
+
+def put_ats() -> Tuple[Dict, int]:
+    request_data = copy.deepcopy(request.json)
+    print(f"Updating ATS with: {request_data}")
+    if not settings.DATABASE[ATS_TABLE].find_one():
+        settings.DATABASE[ATS_TABLE].insert_one(request_data)
+    else:
+        settings.DATABASE[ATS_TABLE].replace_one({}, request_data)
+    return {"ats_stored": request.json}, 200
+
+
+def patch_ats() -> Tuple[Dict, int]:
+    ats_data = settings.DATABASE[ATS_TABLE].find_one()
+    if ats_data:
+        del ats_data["_id"]
+        ats_data.update(request.json)
+        settings.DATABASE[ATS_TABLE].replace_one({}, ats_data)
+
+        return {"ats_stored": ats_data}, 200
+    else:
+        return {"error": "No ATS configured"}, 400
+
+
+def delete_ats() -> Tuple[Dict, int]:
+    result = settings.DATABASE[ATS_TABLE].delete_many({})
+    return {"deleted": result.deleted_count}, 200
